# Moneytor

./: .gitignore  .gitmodules  CMakeLists.txt  list.c  list.h  list_private.h  main.c  main.h
inc/: common.h  dir_info.h  file_info.h  file_system_scanner.h  list.h  listDataHandlers.h  list_private.h  main.h  moneytorDefinitions.h  utills.h
src/: common.c  dir_info.c  file_info.c  file_system_scanner.c  list.c  listDataHandlers.c  main.c  utills.c
test/: test_list.cpp  test_listDataHandlers.cpp  test_utills.cpp
